test/integration/page-config/pages/invalid/import-export.js
// eslint-disable-next-line no-unused-vars
import { config } from '../../config'

// export { config }

export default () => <p>hello world</p>
